[gd_scene load_steps=13 format=4 uid="uid://c4vdfi1tvpeqn"]

[ext_resource type="Texture2D" uid="uid://bbndx6yebolop" path="res://Assets/Tiles/TileSet placeholder.png" id="1_bo1nx"]
[ext_resource type="Texture2D" uid="uid://d0r7lel36qx0w" path="res://Assets/Tiles/SelectedTiles.png" id="2_jjvhh"]
[ext_resource type="Script" uid="uid://sw4law8b77sm" path="res://Scripts/tile_map_layer_selected.gd" id="3_jjvhh"]
[ext_resource type="Script" uid="uid://cvnodahisu2qt" path="res://Scripts/unit_manager.gd" id="4_21xkr"]
[ext_resource type="PackedScene" uid="uid://uub8wfdmjac5" path="res://Scenes/player_unit.tscn" id="5_21xkr"]
[ext_resource type="Script" uid="uid://dlnns2dm4mtf6" path="res://Scripts/turn_manager.gd" id="7_6bp64"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ig7tw"]
texture = ExtResource("1_bo1nx")
texture_region_size = Vector2i(81, 81)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0

[sub_resource type="TileSet" id="TileSet_0xm2m"]
tile_size = Vector2i(81, 81)
sources/0 = SubResource("TileSetAtlasSource_ig7tw")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jjvhh"]
texture = ExtResource("2_jjvhh")
texture_region_size = Vector2i(81, 81)
3:2/0 = 0
5:2/0 = 0
3:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_kry3j"]
tile_size = Vector2i(81, 81)
sources/1 = SubResource("TileSetAtlasSource_jjvhh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kry3j"]
texture = ExtResource("2_jjvhh")
texture_region_size = Vector2i(81, 81)
3:2/0 = 0
5:2/0 = 0
3:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_21xkr"]
tile_size = Vector2i(81, 81)
sources/1 = SubResource("TileSetAtlasSource_kry3j")

[node name="Main" type="Node2D"]

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="TileMapLayerGround" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAACAAEAAAABAAMAAAACAAIAAAACAAQAAAACAAMAAAACAAUAAAACAAQAAAACAAYAAAACAAUAAAAOAAUAAAACAAYAAAAOAAUAAAACAAcAAAACAAQAAAACAAgAAAACAAUAAAACAAkAAAACAAYAAAACAAoAAAACAAcAAAADAAEAAAACAAMAAAADAAIAAAABAAQAAAADAAMAAAABAAUAAAADAAQAAAABAAYAAAADAAUAAAABAAcAAAADAAYAAAABAAMAAAADAAcAAAABAAQAAAADAAgAAAABAAUAAAADAAkAAAABAAYAAAADAAoAAAABAAMAAAAEAAEAAAADAAMAAAAEAAIAAAABAAQAAAAEAAMAAAABAAUAAAAEAAQAAAABAAYAAAAEAAUAAAABAAcAAAAEAAYAAAABAAMAAAAEAAcAAAABAAQAAAAEAAgAAAABAAUAAAAEAAkAAAABAAYAAAAEAAoAAAACAAMAAAAFAAEAAAAEAAMAAAAFAAIAAAABAAQAAAAFAAMAAAABAAUAAAAFAAQAAAABAAYAAAAFAAUAAAABAAcAAAAFAAYAAAABAAMAAAAFAAcAAAABAAQAAAAFAAgAAAABAAUAAAAFAAkAAAABAAYAAAAFAAoAAAADAAMAAAAGAAEAAAAFAAMAAAAGAAIAAAABAAQAAAAGAAMAAAABAAUAAAAGAAQAAAABAAYAAAAGAAUAAAABAAcAAAAGAAYAAAABAAMAAAAGAAcAAAABAAQAAAAGAAgAAAABAAUAAAAGAAkAAAABAAYAAAAGAAoAAAAEAAMAAAAHAAEAAAABAAMAAAAHAAIAAAABAAQAAAAHAAMAAAABAAUAAAAHAAQAAAABAAYAAAAHAAUAAAABAAcAAAAHAAYAAAABAAMAAAAHAAcAAAABAAQAAAAHAAgAAAABAAUAAAAHAAkAAAABAAYAAAAHAAoAAAAFAAMAAAAIAAEAAAACAAMAAAAIAAIAAAABAAQAAAAIAAMAAAABAAUAAAAIAAQAAAABAAYAAAAIAAUAAAABAAcAAAAIAAYAAAABAAMAAAAIAAcAAAABAAQAAAAIAAgAAAABAAUAAAAIAAkAAAABAAYAAAAIAAoAAAABAAMAAAAJAAEAAAADAAMAAAAJAAIAAAABAAQAAAAJAAMAAAABAAUAAAAJAAQAAAABAAYAAAAJAAUAAAABAAcAAAAJAAYAAAABAAMAAAAJAAcAAAABAAQAAAAJAAgAAAABAAUAAAAJAAkAAAABAAYAAAAJAAoAAAACAAMAAAAKAAEAAAAEAAMAAAAKAAIAAAABAAQAAAAKAAMAAAABAAUAAAAKAAQAAAABAAYAAAAKAAUAAAABAAcAAAAKAAYAAAABAAMAAAAKAAcAAAABAAQAAAAKAAgAAAABAAUAAAAKAAkAAAABAAYAAAAKAAoAAAADAAMAAAALAAEAAAAFAAMAAAALAAIAAAABAAQAAAALAAMAAAABAAUAAAALAAQAAAABAAYAAAALAAUAAAABAAcAAAALAAYAAAABAAMAAAALAAcAAAABAAQAAAALAAgAAAABAAUAAAALAAkAAAABAAYAAAALAAoAAAAEAAMAAAAMAAEAAAABAAMAAAAMAAIAAAABAAQAAAAMAAMAAAABAAUAAAAMAAQAAAABAAYAAAAMAAUAAAABAAcAAAAMAAYAAAABAAMAAAAMAAcAAAABAAQAAAAMAAgAAAABAAUAAAAMAAkAAAABAAYAAAAMAAoAAAAFAAMAAAANAAEAAAACAAMAAAANAAIAAAABAAQAAAANAAMAAAABAAUAAAANAAQAAAABAAYAAAANAAUAAAABAAcAAAANAAYAAAABAAMAAAANAAcAAAABAAQAAAANAAgAAAABAAUAAAANAAkAAAABAAYAAAANAAoAAAABAAMAAAAOAAEAAAADAAMAAAAOAAIAAAABAAQAAAAOAAMAAAABAAUAAAAOAAQAAAABAAYAAAAOAAUAAAABAAcAAAAOAAYAAAABAAMAAAAOAAcAAAABAAQAAAAOAAgAAAABAAUAAAAOAAkAAAABAAYAAAAOAAoAAAACAAMAAAAPAAEAAAAEAAMAAAAPAAIAAAABAAQAAAAPAAMAAAABAAUAAAAPAAQAAAABAAYAAAAPAAUAAAABAAcAAAAPAAYAAAABAAMAAAAPAAcAAAABAAQAAAAPAAgAAAABAAUAAAAPAAkAAAABAAYAAAAPAAoAAAADAAMAAAAQAAEAAAAFAAMAAAAQAAIAAAABAAQAAAAQAAMAAAABAAUAAAAQAAQAAAABAAYAAAAQAAUAAAABAAcAAAAQAAYAAAABAAMAAAAQAAcAAAABAAQAAAAQAAgAAAABAAUAAAAQAAkAAAABAAYAAAAQAAoAAAAEAAMAAAARAAEAAAABAAMAAAARAAIAAAABAAQAAAARAAMAAAABAAUAAAARAAQAAAABAAYAAAARAAUAAAABAAcAAAARAAYAAAABAAMAAAARAAcAAAABAAQAAAARAAgAAAABAAUAAAARAAkAAAABAAYAAAARAAoAAAABAAMAAAASAAEAAAACAAMAAAASAAIAAAABAAQAAAASAAMAAAABAAUAAAASAAQAAAABAAYAAAASAAUAAAABAAcAAAASAAYAAAABAAMAAAASAAcAAAABAAQAAAASAAgAAAABAAUAAAASAAkAAAABAAYAAAASAAoAAAACAAMAAAATAAEAAAADAAMAAAATAAIAAAABAAQAAAATAAMAAAABAAUAAAATAAQAAAABAAYAAAATAAUAAAABAAcAAAATAAYAAAABAAMAAAATAAcAAAABAAQAAAATAAgAAAABAAUAAAATAAkAAAABAAYAAAATAAoAAAADAAMAAAAUAAEAAAAEAAMAAAAUAAIAAAABAAQAAAAUAAMAAAABAAUAAAAUAAQAAAABAAYAAAAUAAUAAAABAAcAAAAUAAYAAAABAAMAAAAUAAcAAAABAAQAAAAUAAgAAAABAAUAAAAUAAkAAAABAAYAAAAUAAoAAAAEAAMAAAAVAAEAAAABAAMAAAAVAAIAAAABAAQAAAAVAAMAAAABAAUAAAAVAAQAAAABAAYAAAAVAAUAAAAOAAUAAAAVAAYAAAAOAAUAAAAVAAcAAAABAAQAAAAVAAgAAAABAAUAAAAVAAkAAAABAAYAAAAVAAoAAAABAAcAAAA=")
tile_set = SubResource("TileSet_0xm2m")

[node name="TileMapLayerGrid" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAACAAEAAQADAAIAAAACAAIAAQADAAIAAAACAAMAAQADAAIAAAACAAQAAQADAAIAAAACAAUAAQADAAIAAAACAAYAAQADAAIAAAACAAcAAQADAAIAAAACAAgAAQADAAIAAAACAAkAAQADAAIAAAACAAoAAQADAAIAAAADAAEAAQADAAIAAAADAAIAAQADAAIAAAADAAMAAQADAAIAAAADAAQAAQADAAIAAAADAAUAAQADAAIAAAADAAYAAQADAAIAAAADAAcAAQADAAIAAAADAAgAAQADAAIAAAADAAkAAQADAAIAAAADAAoAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAAEAAQAAQADAAIAAAAEAAUAAQADAAIAAAAEAAYAAQADAAIAAAAEAAcAAQADAAIAAAAEAAgAAQADAAIAAAAEAAkAAQADAAIAAAAEAAoAAQADAAIAAAAFAAEAAQADAAIAAAAFAAIAAQADAAIAAAAFAAMAAQADAAIAAAAFAAQAAQADAAIAAAAFAAUAAQADAAIAAAAFAAYAAQADAAIAAAAFAAcAAQADAAIAAAAFAAgAAQADAAIAAAAFAAkAAQADAAIAAAAFAAoAAQADAAIAAAAGAAEAAQADAAIAAAAGAAIAAQADAAIAAAAGAAMAAQADAAIAAAAGAAQAAQADAAIAAAAGAAUAAQADAAIAAAAGAAYAAQADAAIAAAAGAAcAAQADAAIAAAAGAAgAAQADAAIAAAAGAAkAAQADAAIAAAAGAAoAAQADAAIAAAAHAAEAAQADAAIAAAAHAAIAAQADAAIAAAAHAAMAAQADAAIAAAAHAAQAAQADAAIAAAAHAAUAAQADAAIAAAAHAAYAAQADAAIAAAAHAAcAAQADAAIAAAAHAAgAAQADAAIAAAAHAAkAAQADAAIAAAAHAAoAAQADAAIAAAAIAAEAAQADAAIAAAAIAAIAAQADAAIAAAAIAAMAAQADAAIAAAAIAAQAAQADAAIAAAAIAAUAAQADAAIAAAAIAAYAAQADAAIAAAAIAAcAAQADAAIAAAAIAAgAAQADAAIAAAAIAAkAAQADAAIAAAAIAAoAAQADAAIAAAAJAAEAAQADAAIAAAAJAAIAAQADAAIAAAAJAAMAAQADAAIAAAAJAAQAAQADAAIAAAAJAAUAAQADAAIAAAAJAAYAAQADAAIAAAAJAAcAAQADAAIAAAAJAAgAAQADAAIAAAAJAAkAAQADAAIAAAAJAAoAAQADAAIAAAAKAAEAAQADAAIAAAAKAAIAAQADAAIAAAAKAAMAAQADAAIAAAAKAAQAAQADAAIAAAAKAAUAAQADAAIAAAAKAAYAAQADAAIAAAAKAAcAAQADAAIAAAAKAAgAAQADAAIAAAAKAAkAAQADAAIAAAAKAAoAAQADAAIAAAALAAEAAQADAAIAAAALAAIAAQADAAIAAAALAAMAAQADAAIAAAALAAQAAQADAAIAAAALAAUAAQADAAIAAAALAAYAAQADAAIAAAALAAcAAQADAAIAAAALAAgAAQADAAIAAAALAAkAAQADAAIAAAALAAoAAQADAAIAAAAMAAEAAQADAAIAAAAMAAIAAQADAAIAAAAMAAMAAQADAAIAAAAMAAQAAQADAAIAAAAMAAUAAQADAAIAAAAMAAYAAQADAAIAAAAMAAcAAQADAAIAAAAMAAgAAQADAAIAAAAMAAkAAQADAAIAAAAMAAoAAQADAAIAAAANAAEAAQADAAIAAAANAAIAAQADAAIAAAANAAMAAQADAAIAAAANAAQAAQADAAIAAAANAAUAAQADAAIAAAANAAYAAQADAAIAAAANAAcAAQADAAIAAAANAAgAAQADAAIAAAANAAkAAQADAAIAAAANAAoAAQADAAIAAAAOAAEAAQADAAIAAAAOAAIAAQADAAIAAAAOAAMAAQADAAIAAAAOAAQAAQADAAIAAAAOAAUAAQADAAIAAAAOAAYAAQADAAIAAAAOAAcAAQADAAIAAAAOAAgAAQADAAIAAAAOAAkAAQADAAIAAAAOAAoAAQADAAIAAAAPAAEAAQADAAIAAAAPAAIAAQADAAIAAAAPAAMAAQADAAIAAAAPAAQAAQADAAIAAAAPAAUAAQADAAIAAAAPAAYAAQADAAIAAAAPAAcAAQADAAIAAAAPAAgAAQADAAIAAAAPAAkAAQADAAIAAAAPAAoAAQADAAIAAAAQAAEAAQADAAIAAAAQAAIAAQADAAIAAAAQAAMAAQADAAIAAAAQAAQAAQADAAIAAAAQAAUAAQADAAIAAAAQAAYAAQADAAIAAAAQAAcAAQADAAIAAAAQAAgAAQADAAIAAAAQAAkAAQADAAIAAAAQAAoAAQADAAIAAAARAAEAAQADAAIAAAARAAIAAQADAAIAAAARAAMAAQADAAIAAAARAAQAAQADAAIAAAARAAUAAQADAAIAAAARAAYAAQADAAIAAAARAAcAAQADAAIAAAARAAgAAQADAAIAAAARAAkAAQADAAIAAAARAAoAAQADAAIAAAASAAEAAQADAAIAAAASAAIAAQADAAIAAAASAAMAAQADAAIAAAASAAQAAQADAAIAAAASAAUAAQADAAIAAAASAAYAAQADAAIAAAASAAcAAQADAAIAAAASAAgAAQADAAIAAAASAAkAAQADAAIAAAASAAoAAQADAAIAAAATAAEAAQADAAIAAAATAAIAAQADAAIAAAATAAMAAQADAAIAAAATAAQAAQADAAIAAAATAAUAAQADAAIAAAATAAYAAQADAAIAAAATAAcAAQADAAIAAAATAAgAAQADAAIAAAATAAkAAQADAAIAAAATAAoAAQADAAIAAAAUAAEAAQADAAIAAAAUAAIAAQADAAIAAAAUAAMAAQADAAIAAAAUAAQAAQADAAIAAAAUAAUAAQADAAIAAAAUAAYAAQADAAIAAAAUAAcAAQADAAIAAAAUAAgAAQADAAIAAAAUAAkAAQADAAIAAAAUAAoAAQADAAIAAAAVAAEAAQADAAIAAAAVAAIAAQADAAIAAAAVAAMAAQADAAIAAAAVAAUAAQADAAIAAAAVAAYAAQADAAIAAAAVAAcAAQADAAIAAAAVAAgAAQADAAIAAAAVAAkAAQADAAIAAAAVAAoAAQADAAIAAAAVAAQAAQADAAIAAAA=")
tile_set = SubResource("TileSet_kry3j")

[node name="TileMapLayerSelected" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAACAAEAAQADAAIAAAACAAIAAQADAAIAAAACAAMAAQADAAIAAAACAAQAAQADAAIAAAACAAUAAQADAAIAAAACAAYAAQADAAIAAAACAAcAAQADAAIAAAACAAgAAQADAAIAAAACAAkAAQADAAIAAAACAAoAAQADAAIAAAADAAEAAQADAAIAAAADAAIAAQADAAIAAAADAAMAAQADAAIAAAADAAQAAQADAAIAAAADAAUAAQADAAIAAAADAAYAAQADAAIAAAADAAcAAQADAAIAAAADAAgAAQADAAIAAAADAAkAAQADAAIAAAADAAoAAQADAAIAAAAEAAEAAQADAAIAAAAEAAIAAQADAAIAAAAEAAMAAQADAAIAAAAEAAQAAQADAAIAAAAEAAUAAQADAAIAAAAEAAYAAQADAAIAAAAEAAcAAQADAAIAAAAEAAgAAQADAAIAAAAEAAkAAQADAAIAAAAEAAoAAQADAAIAAAAFAAEAAQADAAIAAAAFAAIAAQADAAIAAAAFAAMAAQADAAIAAAAFAAQAAQADAAIAAAAFAAUAAQADAAIAAAAFAAYAAQADAAIAAAAFAAcAAQADAAIAAAAFAAgAAQADAAIAAAAFAAkAAQADAAIAAAAFAAoAAQADAAIAAAAGAAEAAQADAAIAAAAGAAIAAQADAAIAAAAGAAMAAQADAAIAAAAGAAQAAQADAAIAAAAGAAUAAQADAAIAAAAGAAYAAQADAAIAAAAGAAcAAQADAAIAAAAGAAgAAQADAAIAAAAGAAkAAQADAAIAAAAGAAoAAQADAAIAAAAHAAEAAQADAAIAAAAHAAIAAQADAAIAAAAHAAMAAQADAAIAAAAHAAQAAQADAAIAAAAHAAUAAQADAAIAAAAHAAYAAQADAAIAAAAHAAcAAQADAAIAAAAHAAgAAQADAAIAAAAHAAkAAQADAAIAAAAHAAoAAQADAAIAAAAIAAEAAQADAAIAAAAIAAIAAQADAAIAAAAIAAMAAQADAAIAAAAIAAQAAQADAAIAAAAIAAUAAQADAAIAAAAIAAYAAQADAAIAAAAIAAcAAQADAAIAAAAIAAgAAQADAAIAAAAIAAkAAQADAAIAAAAIAAoAAQADAAIAAAAJAAEAAQADAAIAAAAJAAIAAQADAAIAAAAJAAMAAQADAAIAAAAJAAQAAQADAAIAAAAJAAUAAQADAAIAAAAJAAYAAQADAAIAAAAJAAcAAQADAAIAAAAJAAgAAQADAAIAAAAJAAkAAQADAAIAAAAJAAoAAQADAAIAAAAKAAEAAQADAAIAAAAKAAIAAQADAAIAAAAKAAMAAQADAAIAAAAKAAQAAQADAAIAAAAKAAUAAQADAAIAAAAKAAYAAQADAAIAAAAKAAcAAQADAAIAAAAKAAgAAQADAAIAAAAKAAkAAQADAAIAAAAKAAoAAQADAAIAAAALAAEAAQADAAIAAAALAAIAAQADAAIAAAALAAMAAQADAAIAAAALAAQAAQADAAIAAAALAAUAAQADAAIAAAALAAYAAQADAAIAAAALAAcAAQADAAIAAAALAAgAAQADAAIAAAALAAkAAQADAAIAAAALAAoAAQADAAIAAAAMAAEAAQADAAIAAAAMAAIAAQADAAIAAAAMAAMAAQADAAIAAAAMAAQAAQADAAIAAAAMAAUAAQADAAIAAAAMAAYAAQADAAIAAAAMAAcAAQADAAIAAAAMAAgAAQADAAIAAAAMAAkAAQADAAIAAAAMAAoAAQADAAIAAAANAAEAAQADAAIAAAANAAIAAQADAAIAAAANAAMAAQADAAIAAAANAAQAAQADAAIAAAANAAUAAQADAAIAAAANAAYAAQADAAIAAAANAAcAAQADAAIAAAANAAgAAQADAAIAAAANAAkAAQADAAIAAAANAAoAAQADAAIAAAAOAAEAAQADAAIAAAAOAAIAAQADAAIAAAAOAAMAAQADAAIAAAAOAAQAAQADAAIAAAAOAAUAAQADAAIAAAAOAAYAAQADAAIAAAAOAAcAAQADAAIAAAAOAAgAAQADAAIAAAAOAAkAAQADAAIAAAAOAAoAAQADAAIAAAAPAAEAAQADAAIAAAAPAAIAAQADAAIAAAAPAAMAAQADAAIAAAAPAAQAAQADAAIAAAAPAAUAAQADAAIAAAAPAAYAAQADAAIAAAAPAAcAAQADAAIAAAAPAAgAAQADAAIAAAAPAAkAAQADAAIAAAAPAAoAAQADAAIAAAAQAAEAAQADAAIAAAAQAAIAAQADAAIAAAAQAAMAAQADAAIAAAAQAAQAAQADAAIAAAAQAAUAAQADAAIAAAAQAAYAAQADAAIAAAAQAAcAAQADAAIAAAAQAAgAAQADAAIAAAAQAAkAAQADAAIAAAAQAAoAAQADAAIAAAARAAEAAQADAAIAAAARAAIAAQADAAIAAAARAAMAAQADAAIAAAARAAQAAQADAAIAAAARAAUAAQADAAIAAAARAAYAAQADAAIAAAARAAcAAQADAAIAAAARAAgAAQADAAIAAAARAAkAAQADAAIAAAARAAoAAQADAAIAAAASAAEAAQADAAIAAAASAAIAAQADAAIAAAASAAMAAQADAAIAAAASAAQAAQADAAIAAAASAAUAAQADAAIAAAASAAYAAQADAAIAAAASAAcAAQADAAIAAAASAAgAAQADAAIAAAASAAkAAQADAAIAAAASAAoAAQADAAIAAAATAAEAAQADAAIAAAATAAIAAQADAAIAAAATAAMAAQADAAIAAAATAAQAAQADAAIAAAATAAUAAQADAAIAAAATAAYAAQADAAIAAAATAAcAAQADAAIAAAATAAgAAQADAAIAAAATAAkAAQADAAIAAAATAAoAAQADAAIAAAAUAAEAAQADAAIAAAAUAAIAAQADAAIAAAAUAAMAAQADAAIAAAAUAAQAAQADAAIAAAAUAAUAAQADAAIAAAAUAAYAAQADAAIAAAAUAAcAAQADAAIAAAAUAAgAAQADAAIAAAAUAAkAAQADAAIAAAAUAAoAAQADAAIAAAAVAAEAAQADAAIAAAAVAAIAAQADAAIAAAAVAAMAAQADAAIAAAAVAAQAAQADAAIAAAAVAAUAAQADAAIAAAAVAAYAAQADAAIAAAAVAAcAAQADAAIAAAAVAAgAAQADAAIAAAAVAAkAAQADAAIAAAAVAAoAAQADAAIAAAA=")
tile_set = SubResource("TileSet_21xkr")
script = ExtResource("3_jjvhh")

[node name="UnitManager" type="Node2D" parent="."]
script = ExtResource("4_21xkr")

[node name="BlueGroup" type="Node2D" parent="UnitManager"]

[node name="Player1Unit" parent="UnitManager/BlueGroup" instance=ExtResource("5_21xkr")]
position = Vector2(203, 121)

[node name="Player1Unit4" parent="UnitManager/BlueGroup" instance=ExtResource("5_21xkr")]
position = Vector2(204, 365)

[node name="Player1Unit5" parent="UnitManager/BlueGroup" instance=ExtResource("5_21xkr")]
position = Vector2(203, 607)

[node name="Player1Unit8" parent="UnitManager/BlueGroup" instance=ExtResource("5_21xkr")]
position = Vector2(204, 851)

[node name="RedGroup" type="Node2D" parent="UnitManager"]

[node name="Player1Unit" parent="UnitManager/RedGroup" instance=ExtResource("5_21xkr")]
position = Vector2(1742, 122)
team = "red"

[node name="Player1Unit2" parent="UnitManager/RedGroup" instance=ExtResource("5_21xkr")]
position = Vector2(1742, 283)
team = "red"

[node name="Player1Unit3" parent="UnitManager/RedGroup" instance=ExtResource("5_21xkr")]
position = Vector2(1742, 690)
team = "red"

[node name="Player1Unit4" parent="UnitManager/RedGroup" instance=ExtResource("5_21xkr")]
position = Vector2(1742, 851)
team = "red"

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("7_6bp64")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnIndicator" type="CanvasLayer" parent="UI"]

[node name="LabelBlue" type="Label" parent="UI/TurnIndicator"]
visible = false
offset_left = 600.0
offset_top = 10.0
offset_right = 1339.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 50
text = "Blue  team's  turn"
uppercase = true

[node name="LabelRed" type="Label" parent="UI/TurnIndicator"]
visible = false
offset_left = 600.0
offset_top = 10.0
offset_right = 1339.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 50
text = "REd  team's  turn"
uppercase = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(973, 486)
